<resources>
	<string name="app_name">Mileage</string>
	<string name="odometer">Odometer</string>
	<string name="add_fillup">Save Fill-up</string>
	<string name="fillup">Fill-Up</string>
	<string name="fillup_history">History</string>
	<string name="graphs">Graphs</string>
	<string name="save_changes">Save Changes</string>
	<string name="delete">Delete</string>
	<string name="deleted">Deleted</string>
	<string name="backspace">Del</string>
	<string name="edit">Edit</string>
	<string name="edit_fillup">Edit Fill-up</string>
	<string name="cancel_changes">Cancel Changes</string>
	<string name="confirm_delete">Are you sure you want to delete this?</string>
	<string name="confirm_erase">Are you sure you want to completely erase the database? This can not be undone!</string>
	<string name="confirm_erase_location">Are you sure you want to wipe *all* location data? This can not be undone!</string>
	<string name="location_data_erased">All location data has been wiped!</string>
	<string name="confirm_data">Confirm data</string>
	<string name="confirm_import">Is the following data correct?</string>
	<string name="date">Date</string>
	<string name="statistics">Statistics</string>
	<string name="charts">Charts</string>
	<string name="close">Close</string>
	<string name="about">About</string>
	<string name="author">Evan Charlton</string>
	<string name="contact">mileage@evancharlton.com</string>
	<string name="website">http://evancharlton.com/projects/mileage</string>
	<string name="today">Today</string>
	<string name="comment">Comment (optional)</string>
	<string name="make_default">Make this vehicle the default</string>
	<string name="make_default_short">Make Default</string>
	<string name="settings">Settings</string>
	<string name="operations">Operations</string>
	<string name="erase">Erase</string>
	<string name="filename">Filename</string>
	<string name="success">Success</string>
	<string name="save_as">Save file as:</string>
	<string name="select_file">Select file to import:</string>
	<string name="data_parsed">Data parsed, please confirm the input</string>
	<string name="parsing_title">Parsing</string>
	<string name="parsing">Parsing data...</string>
	<string name="parsed_date">Parsed date:</string>
	<string name="import_options">Import Options</string>
	<string name="partial_fillup_economy">Partial Fill-up</string>
	<string name="description">Description</string>
	<string name="save">Save</string>
	<string name="unknown_version">Unknown version</string>
	<string name="price_per_unit">Price per %s</string>
	<string name="total_cost">Total cost</string>
	<string name="total_volume">%s of fuel</string>
	<string name="calculating">Calculating</string>
	<string name="statistics_calculating">Calculating statistics ...</string>
	<string name="average">Average</string>
	<string name="maximum">Maximum</string>
	<string name="minimum">Minimum</string>
	<string name="last">Last</string>
	<string name="total">Total</string>
	<string name="last_month">Last month</string>
	<string name="last_year">Last year</string>
	<string name="fuel_per">Fuel / %1$d %1$s</string>
	<string name="average_cost_per">Average cost per %1$s</string>
	<string name="maximum_cost_per">Maximum cost per %1$s</string>
	<string name="minimum_cost_per">Minimum cost per %1$s</string>
	<string name="last_cost_per">Last cost per %1$s</string>
	<string name="fuel_economy">Fuel Economy</string>
	<string name="fuel_expenses">Fuel Expenses</string>
	<string name="fuel_amounts">Fuel Amounts</string>
	<string name="fuel_prices">Fuel Prices</string>
	<string name="fillup_costs">Fill-Up Costs</string>
	<string name="distance_between_fillups">Distance Between Fill-Ups</string>
	<string name="fillup_locations">Fill-Up Locations</string>
	<string name="location_north">Farthest North</string>
	<string name="location_south">Farthest South</string>
	<string name="location_east">Farthest East</string>
	<string name="location_west">Farthest West</string>
	<string name="vehicles">Vehicles</string>
	<string name="vehicle_make">Make</string>
	<string name="vehicle_model">Model</string>
	<string name="vehicle_year">Year</string>
	<string name="vehicle_title">Title (e.g. Mom's car)</string>
	<string name="vehicle_add">Add Vehicle</string>
	<string name="vehicle_save">Save Vehicle</string>
	<string name="vehicle_edit">Edit Vehicle</string>
	<string name="vehicle_saved">Vehicle saved</string>
	<string name="vehicle_error_saving">Error while saving vehicle!</string>
	<string name="fillup_saved">Fill-up saved</string>
	<string name="fillup_error_saving">Error while saving fill-up!</string>
	<string name="fillup_deleted">Fill-up deleted</string>
	<string name="fillup_edit">Edit Fill-up</string>
	<string name="context_litres_to_gallons">Litres to Gallons</string>
	<string name="context_litres_to_imp_gallons">Litres to Imperial Gallons</string>
	<string name="context_gallons_to_litres">Gallons to Litres</string>
	<string name="context_gallons_to_imp_gallons">Gallons to Imperial Gallons</string>
	<string name="context_imp_gallons_to_litres">Imperial Gallons to Litres</string>
	<string name="context_imp_gallons_to_gallons">Imperial Gallons to Gallons</string>
	<string name="context_convert_to_unit_cost">Convert to unit cost</string>
	<string name="context_miles_to_km">Miles to Kilometers</string>
	<string name="context_km_to_miles">Kilometers to Miles</string>
	<string name="partial_fillup">Tank was not filled to the top</string>
	<string name="restore_database">Restore from latest backup</string>
	<string name="backup_restored">Backup Restored!</string>
	<string name="backup_restored_msg">Your database has been successfully restored from backup!</string>
	<string name="charts_fuel_price">Fuel Price</string>
	<string name="charts_fuel_amount">Amount of Fuel</string>
	<string name="charts_fillup_cost">Fill-up Cost</string>
	<string name="charts_fuel_economy">Fuel Economy</string>
	<string name="charts_delta_distance">Distance Between Fill-ups</string>
	<string name="charts_odometer">Vehicle Odometer</string>
	<string name="import_export">Import / Export</string>
	<string name="export_header">Export</string>
	<string name="error_exporting_data">Error while exporting</string>
	<string name="export_finished">Success!</string>
	<string name="export_finished_msg">The exported file is on your SD card in the file:</string>
	<string name="exporting">Exporting database</string>
	<string name="importing">Importing into database</string>
	<string name="exporting_title">Exporting...</string>
	<string name="importing_title">Importing...</string>
	<string name="import_header">Import</string>
	<string name="import_sqlite">Import SQLite</string>
	<string name="import_sql">Import SQL</string>
	<string name="import_csv">Import CSV</string>
	<string name="export_sqlite">Export SQLite</string>
	<string name="export_csv">Export CSV</string>
	<string name="export_sql">Export SQL</string>
	<string name="import_done">Success!</string>
	<string name="import_done_msg">The data in the following file has been imported:</string>
	<string name="error_importing_data">Error while importing</string>
	<string name="sqlite">SQLite DB</string>
	<string name="sql_file">SQL</string>
	<string name="csv_file">CSV</string>
	<string name="service_intervals">Service Intervals</string>
	<string name="add_service_interval">Add Service Interval</string>
	<string name="edit_service_interval">Edit Service Interval</string>
	<string name="service_interval_saved">Service interval saved!</string>
	<string name="service_interval_error_saving">There was an error while saving the service interval!</string>
	<string name="service_interval_confirm_delete_expired">This service for %s is due. Would you like to delete this service reminder?</string>
	<string name="service_interval_remind">Remind Tomorrow</string>
	<string name="service_interval_repeat_alarm">Repeat this alarm</string>
	<string name="service_interval_description">A quick description of the service</string>
	<string name="service_interval_duration">Duration</string>
	<string name="service_interval_distance">Distance</string>
	<string name="service_interval_reminder_alarm">Reminder Alarm</string>
	<string name="service_interval_alarm_date">Date</string>
	<string name="service_interval_odometer">Odometer</string>
	<string name="service_interval_reminder_start">Interval Start</string>
	<string name="service_interval_vehicle">Vehicle</string>
	<string name="service_interval_presets">Presets</string>
	<string name="service_interval_empty">Press Menu to add a new Service Interval</string>
	<string name="service_interval_error_description">No description set! This is a required field!</string>
	<string name="service_interval_error_create_date">No start date was set!</string>
	<string name="service_interval_error_create_odometer">Start mileage was never set, or is invalid.</string>
	<string name="service_interval_error_duration">No interval duration has been specified, or is invalid.</string>
	<string name="service_interval_error_distance">Interval distance has not been set, or is invalid.</string>
	<string name="service_interval_error_vehicle_id">Vehicle ID was not set</string>
	<string name="service_interval_due">Due for %s</string>
	<string name="preset_oil_change_standard">Oil Change (standard)</string>
	<string name="preset_oil_change_synthetic">Oil Change (synthetic)</string>
	<string name="preset_air_filter">Replace Air Filter</string>
	<string name="preset_power_steering">Replace Power Steering Fluid</string>
	<string name="preset_transmission_fluid">Replace Transmission Fluid</string>
	<string name="preset_timing_belt">Replace Timing Belt</string>
	<string name="preset_fuel_filter">Replace Fuel Filter</string>
	<string name="preset_custom">Custom</string>
	<string name="settings_header_locale">Localization</string>
	<string name="settings_date_format">Date:</string>
	<string name="settings_number_format">Numbers:</string>
	<string name="settings_header_system">System of Measure</string>
	<string name="settings_volume">Volume</string>
	<string name="settings_distance">Distance</string>
	<string name="settings_economy">Economy</string>
	<string name="settings_currency">Currency</string>
	<string name="system_help">Calculation Help</string>
	<string name="settings_header_application">Application</string>
	<string name="settings_orientation">Orientation</string>
	<string name="settings_volume_summary">Units to use when recording fill-ups</string>
	<string name="settings_distance_summary">Units of distance to use when recording fill-ups</string>
	<string name="settings_economy_summary">Units to use when calculating fuel economy</string>
	<string name="settings_date_summary">What format to use when displaying dates</string>
	<string name="settings_currency_summary">What currency symbol to use</string>
	<string name="settings_location_on">Location data will be collected (private; never leaves your phone!)</string>
	<string name="settings_location_off">No location data will be collected</string>
	<string name="settings_erase_location_data">Erase location data</string>
	<string name="settings_fillup_options">Fill-up Options</string>
	<string name="settings_fillup_options_summary">Choose the most convenient data fields to enter</string>
	<string name="total_volume_unit_price">Unit price, total volume</string>
	<string name="total_volume_total_cost">Total cost, total volume</string>
	<string name="total_cost_unit_price">Total cost, unit price</string>
	<string name="error">Error!</string>
	<string name="error_cost">Invalid number format for price of fuel.</string>
	<string name="error_amount">Invalid number format for amount of fuel.</string>
	<string name="error_mileage">Invalid number format for odometer reading.</string>
	<string name="error_year">Year can not be blank!</string>
	<string name="error_make">Make can not be blank!</string>
	<string name="error_model">Model can not be blank!</string>
</resources>