<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
>
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	>
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
		>
		    <TextView
			    android:layout_width="0dip"
			    android:layout_height="?android:attr/listPreferredItemHeight"
			    android:textAppearance="?android:attr/textAppearanceLarge"
				android:paddingLeft="10dip"
				android:layout_weight="1"
			    android:gravity="left|center_vertical"
			    android:singleLine="true"
			    android:text="@string/import_header"
			/>
			<TextView
			    android:layout_width="0dip"
				android:layout_weight="1"
			    android:layout_height="?android:attr/listPreferredItemHeight"
			    android:textAppearance="?android:attr/textAppearanceLarge"
				android:paddingRight="10dip"
			    android:gravity="right|center_vertical"
			    android:singleLine="true"
			    android:text="@string/export_header"
			/>
		</LinearLayout>
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		>
			<ImageButton
				android:id="@+id/import_db_btn"
				android:layout_width="100dip"
				android:layout_height="wrap_content"
				android:src="@drawable/database"
			/>
			<TextView
				android:layout_width="0dip"
				android:layout_weight="1"
			    android:layout_height="?android:attr/listPreferredItemHeight"
			    android:textAppearance="?android:attr/textAppearanceLarge"
			    android:gravity="center"
			    android:singleLine="true"
			    android:text="@string/sqlite"
		    />
			<ImageButton
				android:id="@+id/export_db_btn"
				android:layout_width="100dip"
				android:layout_height="wrap_content"
				android:src="@drawable/database"
			/>
		</LinearLayout>
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		>
			<ImageButton
				android:id="@+id/import_sql_btn"
				android:layout_width="100dip"
				android:layout_height="wrap_content"
				android:src="@drawable/binary"
			/>
			<TextView
				android:layout_width="0dip"
			    android:layout_height="?android:attr/listPreferredItemHeight"
			    android:textAppearance="?android:attr/textAppearanceLarge"
			    android:gravity="center"
			    android:layout_weight="1"
			    android:singleLine="true"
			    android:text="@string/sql_file"
		    />
			<ImageButton
				android:id="@+id/export_sql_btn"
				android:layout_width="100dip"
				android:layout_height="wrap_content"
				android:src="@drawable/binary"
			/>
		</LinearLayout>
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		>
			<ImageButton
				android:id="@+id/import_csv_btn"
				android:layout_width="100dip"
				android:layout_height="wrap_content"
				android:src="@drawable/spreadsheet"
			/>
			<TextView
				android:layout_width="0dip"
			    android:layout_height="?android:attr/listPreferredItemHeight"
			    android:textAppearance="?android:attr/textAppearanceLarge"
			    android:gravity="center"
			    android:layout_weight="1"
			    android:singleLine="true"
			    android:text="@string/csv_file"
		    />
			<ImageButton
				android:id="@+id/export_csv_btn"
				android:layout_width="100dip"
				android:layout_height="wrap_content"
				android:src="@drawable/spreadsheet"
			/>
		</LinearLayout>
		<Button
			android:id="@+id/restore_btn"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/restore_database"
		/>
	</LinearLayout>
</ScrollView>