<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:orientation="vertical"
>
	<ScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:layout_weight="1"
	>
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
		>
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			>
				<TextView
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/export_header"
				/>
				<TextView
					android:id="@+id/title"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="right"
				/>
			</LinearLayout>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/save_as"
			/>
			<EditText
				android:id="@+id/filename"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/filename"
				android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789.-_ "
			/>
		</LinearLayout>
	</ScrollView>
	<Button
		android:id="@+id/start"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/export_header"
	/>
</LinearLayout>